Redirect people to new website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <div id="SITE_ROOT" class="SITE_ROOT" style="width:1440px;min-width:980px;top:50px;padding-bottom:0" aria-hidden="false"><div id="masterPage" class="mesh-layout" data-mesh-layout="grid"><footer style="bottom:auto;left:0;margin-left:0;width:100%;min-width:980px;top:;right:;position:" class="fc1_footer fc1" data-site-width="980" data-fixedposition="false" data-isrunninginmobile="false" data-state=" " id="SITE_FOOTER"><div style="left:0;width:100%" id="SITE_FOOTERscreenWidthBackground" class="fc1screenWidthBackground"><div class="fc1_bg"></div></div><div style="width:100%" id="SITE_FOOTERcenteredContent" class="fc1centeredContent"><div style="margin-left:calc((100% - 980px) / 2);width:980px" id="SITE_FOOTERbg" class="fc1bg"><div class="fc1_bg-center"></div></div><div id="SITE_FOOTERinlineContent" class="fc1inlineContent"><style id="SITE_FOOTER-mesh-styles"><!DOCTYPE html>
-<html class="" lang="en"><link type="text/css" id="dark-mode" rel="stylesheet" href=""><style type="text/css" id="dark-mode-custom-style"></style><head>
+<html class="" lang="en"><link type="text/css" id="dark-mode" rel="stylesheet" href=""><style type="text/css" id="dark-mode-custom-style"></style>
+    <head><meta http-equiv="refresh" content="0; URL='https://voyage-mentorship.jimdosite.com/'" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
